Added new cors config